# src/main/java/ch/bbw/m226/openapiproject/RacingTeam/RacingTeamController.java
@@ -1,13 +1,11 @@
 package ch.bbw.m226.openapiproject.RacingTeam;
 
-import ch.bbw.m226.openapi.generated.dto.DriverDto;
 import ch.bbw.m226.openapi.generated.dto.RacingTeamDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collection;
-import java.util.List;
 
 @RestController
 @RequestMapping("v1/f1/racingteam")
@@ -29,8 +27,22 @@ public class RacingTeamController {
     }
 
     @PostMapping()
-    public void createRacingTeam(@RequestBody RacingTeamDto newRacingTeam) {
+    public ResponseEntity createRacingTeam(@RequestBody RacingTeamDto newRacingTeam) {
         service.createRacingTeam(newRacingTeam);
+        return ResponseEntity.status(201).build();
     }
 
+    @PutMapping("{uuid}")
+    public ResponseEntity<RacingTeamDto> updateDriver(@PathVariable String uuid, @RequestBody RacingTeamDto updatedRacingTeam) {
+        return service.updateRacingTeam(uuid, updatedRacingTeam)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    @DeleteMapping("{uuid}")
+    public ResponseEntity<RacingTeamDto> deleteRacingTeam(@PathVariable String uuid) {
+        return service.deleteRacingTeam(uuid)
+                .map(ResponseEntity::ok)
+                .orElseGet(() -> ResponseEntity.notFound().build());
+    }
 }
